# esp32_zigbee_presence

./: .gitignore  .gitmodules  CMakeLists.txt  esp-idf-vscode-generated.gdb  sdkconfig  sdkconfig.dbg  sdkconfig.dbg.c6  sdkconfig.dbg.h2  sdkconfig.rel  sdkconfig.rel.c6  sdkconfig.rel.h2
components/generic_lib/: CMakeLists.txt
components/periphery_helpers/: idf_component.yml
components/zb_helpers/: idf_component.yml
main/: CMakeLists.txt  aht21.cpp  aht21.hpp  board_led.cpp  board_led.hpp  colors_def.hpp  device_common.hpp  device_config.cpp  device_config.hpp  formatter.h  functional_helpers.hpp  generic_function.hpp  generic_helpers.hpp  i2c.cpp  i2c.hpp  idf_component.yml  ld2412.cpp  ld2412.hpp  ld2412_component.cpp  ld2412_component.hpp  ld2420.cpp  ld2420.hpp  ld2420_component.cpp  ld2420_component.hpp  main.cpp  thread_helper.hpp  uart.cpp  uart.hpp  uart_functional.hpp  uart_primitives.hpp  zb_alarm.hpp  zb_binds.cpp  zb_binds.hpp  zb_helpers.hpp  zigbee.cpp  zigbee.hpp
main/functional/: functional.hpp  functional_adaptor.hpp  functional_and_then.hpp  functional_base.hpp  functional_combo.hpp  functional_if_then_else.hpp  functional_or_else.hpp  functional_repeat_n.hpp  functional_repeat_while.hpp  functional_retry_on_fail.hpp  functional_start_sequence.hpp  functional_transform_error.hpp
main/lib/: array_count.hpp  expected_results.hpp  formatter.hpp  function.hpp  linked_list.cpp  linked_list.hpp  misc_helpers.hpp  object_pool.hpp  thread_lock.hpp  type_traits.hpp
main/periph/: board_led.hpp  ld2412.cpp  ld2412.hpp  ld2412_component.cpp  ld2412_component.hpp  uart.cpp  uart.hpp  uart_primitives.hpp
main/zb/: zb_binds.cpp  zb_binds.hpp  zb_dev_def.cpp  zb_dev_def.hpp  zb_dev_def_attr.cpp  zb_dev_def_attr.hpp  zb_dev_def_cmd.cpp  zb_dev_def_cmd.hpp  zb_dev_def_const.hpp  zb_dev_def_report.cpp  zb_external_trigger.cpp  zb_main.cpp  zb_main.hpp  zb_presence_logic.cpp  zb_reset_button.cpp  zb_runtime_state.cpp
main/zb_helpers/: zbh_alarm.hpp  zbh_apsde.hpp  zbh_attributes.hpp  zbh_bind_table.cpp  zbh_bind_table.hpp  zbh_cmd_sender.cpp  zbh_cmd_sender.hpp  zbh_handlers.hpp  zbh_handlers_cmd.cpp  zbh_handlers_cmd.hpp  zbh_handlers_list.hpp  zbh_helpers.hpp  zbh_types.hpp
z2m/: esp32c6.js
