idf_component_register(SRCS 
                    main.cpp 
                    uart.cpp 
                    ld2412.cpp 
                    ld2412_component.cpp
                    zigbee.cpp
                    device_common.hpp
                    device_config.hpp
                    device_config.cpp
                    board_led.hpp
                    board_led.cpp
                    zb_binds.hpp
                    zb_binds.cpp
                    lib/function.hpp
                    lib/array_count.hpp
                    lib/expected_results.hpp
                    lib/formatter.hpp
                    lib/misc_helpers.hpp
                    lib/object_pool.hpp
                    lib/thread.hpp
                    lib/thread_lock.hpp
                    lib/type_traits.hpp
                    lib/linked_list.hpp
                    lib/linked_list.cpp
                    INCLUDE_DIRS "")
add_compile_options("-Wno-invalid-offsetof")
